Limpar o codigo e alterar as variaveis